--- a/scratch.html
+++ b/scratch.html
@@ -59,7 +59,7 @@
   </iframe>
 
   <br><br>
-  <h2>NASA Budget Visualization</h2>
+  <h2>Meteorite Landings</h2>
 
   <div style="text-align: center;">
     <iframe 
